fix: clean up styles.css files for better readability and responsiveness

--- a/project1/styles.css
+++ b/project1/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
 
 * {
     margin: 0;
@@ -9,9 +9,7 @@
 body {
     font-family: Heebo;
     background-color: #f6f8f6;
-
 }
-
 
 #header {
     position: fixed;
@@ -20,9 +18,10 @@ body {
     background-color: lightgray;
     box-shadow: #3A3A3A 0px 0px 10px;
     top: 0;
-
-
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
 }
 
 .logo img {
@@ -30,39 +29,35 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 100px;
-    padding-top: ;
-
-
 }
 
 nav {
+    display: flex;
     justify-content: space-around;
     align-items: center;
     height: 80px;
 }
 
 .logo {
-    padding-right: 100px;
-    padding-top: 20px;
     font-size: 2rem;
     font-weight: 800;
-
 }
 
 .main {
     width: 100%;
     height: 461px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* background: radial-gradient(#64ace6, #91e5d0); */
     background-image: url(..//assets/bgimage.jpg);
-
     box-shadow: #3A3A3A 0px 0px 10px;
-
+    text-align: center;
+    padding: 20px;
 }
 
 .links {
-
+    display: flex;
     text-align: center;
     padding: 50px;
 }
@@ -76,6 +71,7 @@ nav {
     border: #3A3A3A 1px solid;
     border-radius: 30px;
     box-shadow: #3A3A3A 0px 0px 10px;
+    margin: 5px;
 }
 
 .links a:hover {
@@ -85,7 +81,6 @@ nav {
 }
 
 h1 {
-    text-align: center;
     margin: 50px;
     color: black;
     font-size: 80px;
@@ -94,10 +89,8 @@ h1 {
 }
 
 .main p {
-    text-align: center;
     font-size: 20px;
     color: #3A3A3A;
-
 }
 
 .codinglang {
@@ -105,16 +98,10 @@ h1 {
     justify-content: center;
     align-items: center;
     gap: 8rem;
-    /* background-image: url(/assets/progimage.jpg); */
-    /* margin-top: 50px; */
-    padding-bottom: 30px;
-    padding-top: 30px;
-    /* border-bottom: 1px solid #3A3A3A; */
+    padding-bottom: 10px;
+    padding-top: 10px;
     box-shadow: #3A3A3A 0px 0px 10px;
     background-color: white;
-
-
-
 }
 
 .codinglang img {
@@ -126,14 +113,22 @@ h1 {
 
 .codinglang img:hover {
     transform: scale(1.5);
-
 }
 
 .proImage {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     padding-top: 100px;
     padding-bottom: 100px;
+    width: 100%;
+    height: auto;
+    flex-wrap: wrap;
+}
+
+.proImage img {
+    max-width: 100%;
+    height: auto;
 }
 
 .bottomLine {
@@ -143,7 +138,6 @@ h1 {
     display: flex;
     justify-content: space-around;
     background-color: #1AE0EC;
-
 }
 
 .bottomLine img {
@@ -156,10 +150,64 @@ h1 {
 
 .bottomLine .cont p {
     padding-top: 30px;
-
 }
 
 .bottomLine .cont img:hover {
     scale: 1.1;
+}
 
+@media (max-width: 768px) {
+    .logo {
+        font-size: 1.5rem;
+    }
+
+    .main {
+        height: auto;
+        padding: 20px;
+    }
+
+    h1 {
+        font-size: 50px;
+        padding-top: 100px;
+    }
+
+    .links {
+        padding: 20px;
+        flex-direction: column;
+    }
+
+    .links a {
+        font-size: 16px;
+        padding: 8px;
+    }
+
+    .codinglang {
+
+        gap: 2rem;
+    }
+
+    .codinglang img {
+        width: 80px;
+        height: 80px;
+    }
+
+    .proImage {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .bottomLine {
+        flex-direction: column;
+        height: auto;
+        padding: 20px;
+    }
+
+    .bottomLine .cont {
+        margin-bottom: 20px;
+        font-size: smaller;
+    }
+
+    .bottomLine .cont img {
+        scale: 0.7;
+    }
 }
